Mon Aug 12 11:13:58 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* nfs.c (nfs_error_trans): Repair syntax.

Thu Aug  8 18:48:22 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* nfs.h (protocol_version): New variable.
	* mount.c (protocol_version): Define and initialize to `2'.

	* rpcsvc/nfs_prot.h (enum nfsstat): Added new nfsv3 error codes:
	NFSERR_XDEV, NFSERR_INVAL, NFSERR_MLINK, NFSERR_REMOTE,
	NFSERR_BADHANDLE, NFSERR_NOT_SYNC, NFSERR_BAD_COOKIE,
	NFSERR_NOTSUPP, NFSERR_TOOSMALL, NFSERR_SERVERFAULT,
	NFSERR_BADTYPE, NFSERR_JUKEBOX.
	(NFSERR_TRYLATER): New macro.
	* nfs.c (nfs_error_trans): Understand v3 error codes if we are
	runnnig v3.

Wed Jul 31 13:25:00 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* ops.c (netfs_attempt_statfs): Use NFSPROC_STATFS, not SETATTR to
	do a statfs.

Tue Jul 23 19:41:07 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* nfs.c (xdr_encode_sattr_times): `struct timespec' now uses a
	field prefix of `tv_'.

Wed Jul 17 13:12:31 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* main.c (mounted_soft): Initialize to zero.

Thu Jul  4 17:14:42 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* ops.c (netfs_attempt_link) [case SYMLINK]: Include directory
 	handle as an RPC arg.

Wed Jun 26 16:41:00 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (netfs_get_options): New function.
	(netfs_parse_runtime_options, netfs_unparse_runtime_options):
	Functions removed.
	(runtime_argp_parents, runtime_argp, netfs_runtime_argp): New variables.
	(main): Use &NETFS_STD_STARTUP_ARGP insteda of NETFS_STARTUP_ARGP.

Thu Jun 13 09:24:24 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makefile (SRCS): Remove pager.c.
	* nfs.h (struct netnode): Add member `fileinfo'.
	* nfs.h (register_fresh_stat): Add decl.

Wed Jun 12 22:37:31 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makefile (SRCS): Add pager.c.

Wed May 22 18:49:16 1996  Miles Bader  <miles@gnu.ai.mit.edu>
